@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-20T01:47:49Z",
-  "count" : 3,
+  "timestamp" : "2022-10-03T08:24:27Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
