@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-03T01:27:46Z",
+  "timestamp" : "2022-10-03T08:24:27Z",
   "count_outdated" : 557,
   "uniques_outdated" : 321,
-  "count" : 590,
+  "count" : 589,
   "uniques" : 337,
   "clones" : [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
