@@ -1,10 +1,10 @@
 {
-  "count": 33,
+  "count": 32,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
