@@ -1,3 +1,11 @@
+2022-10-03T08:24:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3172662265
+* notice: last 14d: unq all: 4 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 321 557 / 337 590
+* notice: next accum: outdated-unq outdated-all / unq all: 321 557 / 337 589
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-09-19]
+
 2022-10-03T01:27:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3170885698
 * notice: last 14d: unq all: 4 33
